fix(home): prevent content from being stuck behind the footer

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,6 +28,7 @@ $body-bg: #f7f7f7;
 
 body {
   padding-top: 40px;
+  padding-bottom: 90px;
 }
 
 a.list-group-item {
